# jetty_scorecard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
jetty_scorecard/: __init__.py  cli.py  env.py  util.py
jetty_scorecard/checks/: README.MD  __init__.py  active_masking_policies.py  active_row_access_policies.py  all_checks.py  backup_account_admin.py  common.py  future_grant_coverage.py  has_network_policy.py  inaccessible_objects.py  inaccessible_tables_and_views.py  inactive_users.py  least_accessible_objects.py  least_accessible_tables_and_views.py  least_used_tables.py  managed_access_schemas.py  most_accessible_objects.py  most_used_columns.py  most_used_tables.py  overuse_of_admin_roles.py  password_only_login.py  potentially_sensitive_columns.py  shadow_future_grants.py  test_check.py
jetty_scorecard/checks/templates/: active_masking_policies.html.jinja  active_masking_policies_list.html.jinja  active_row_access_policies_list.html.jinja  backup_account_admin.html.jinja  future_grant_coverage.html.jinja  inaccessible_objects.html.jinja  inactive_users.html.jinja  least_accessible_objects.html.jinja  least_used_tables.html.jinja  managed_access_schemas.html.jinja  most_accessible_objects.html.jinja  most_used_columns.html.jinja  most_used_tables.html.jinja  overuse_of_admin_roles.html.jinja  password_only_login.html.jinja  potentially_sensitive_columns.html.jinja  shadow_future_grants.html.jinja  util.jinja
jetty_scorecard/templates/: base.html.jinja  check.html.jinja  jetty_card.html.jinja
